--- a/charts/gitlab/templates/deploy-gitlab.yaml
+++ b/charts/gitlab/templates/deploy-gitlab.yaml
@@ -34,8 +34,8 @@ spec:
           protocol: TCP
         resources:
           requests:
-            cpu: "2"
-            memory: 4Gi
+            cpu: 250m
+            memory: 1Gi
         securityContext:
           privileged: true
         volumeMounts:
