--- a/charts/gitlab/templates/deploy-postgresql.yaml
+++ b/charts/gitlab/templates/deploy-postgresql.yaml
@@ -43,8 +43,8 @@ spec:
           name: postgres
         resources:
           requests:
-            cpu: "2"
-            memory: 4Gi
+            cpu: 250m
+            memory: 1Gi
         readinessProbe:
           exec:
             command:
