deployment strategy recreate

--- a/charts/gitlab/templates/deploy-postgresql.yaml
+++ b/charts/gitlab/templates/deploy-postgresql.yaml
@@ -10,6 +10,8 @@ spec:
   selector:
     matchLabels:
       name: gitlab-postgresql
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
