--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -144,6 +144,8 @@ data:
           delay: 5
           until: r_group.status == 201
 
+{{- if $item.repo }}
+
         - name: Import repository to group
           ansible.builtin.uri:
             url: https://{{ $.Values.gitlab.host }}/api/v4/projects
@@ -166,6 +168,7 @@ data:
 {{- range $item1 := $item.repo }}
             - name: {{ $item1.name }}
               url: {{ $item1.url }}
+{{- end }}
 {{- end }}
 
         - name: Add user to group
