Add users count variable

--- a/charts/gitlab/templates/cm-gitlab-templates.yaml
+++ b/charts/gitlab/templates/cm-gitlab-templates.yaml
@@ -87,6 +87,7 @@ data:
             gitlab_host: "{{ $.Values.gitlab.host }}"
             gitlab_destination_group: development
             cluster_subdomain: ".{{ $.Values.cluster.subdomain }}"
+            gitlab_user_count: "{{ $.Values.gitlab.users.count }}"
 {{- end }}
             
         - name: Add new files to the repository
