--- a/charts/gitlab/templates/cm-gitlab-templates.yaml
+++ b/charts/gitlab/templates/cm-gitlab-templates.yaml
@@ -85,7 +85,7 @@ data:
             mode: "0660"         
           vars:
             gitlab_host: "{{ $.Values.gitlab.host }}"
-            gitlab_destination_group: development
+            gitlab_destination_group: "{{ $.Values.gitlab.destinationgroup }}"
             cluster_subdomain: ".{{ $.Values.cluster.subdomain }}"
             gitlab_user_count: "{{ $.Values.gitlab.users.count }}"
 {{- end }}
