--- a/charts/hashicorp-vault/templates/cluster-role-binding-role-token-review.yaml
+++ b/charts/hashicorp-vault/templates/cluster-role-binding-role-token-review.yaml
@@ -2,12 +2,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: role-tokenreview-binding
-  namespace: default
+  namespace: {{ .Values.vault.auth.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: vault-auth
-  namespace: default
+  name: {{ include "vault.name" .}}-auth
+  namespace: {{ .Values.vault.auth.namespace }}
