--- a/charts/hashicorp-vault/templates/secret-vault-auth.yaml
+++ b/charts/hashicorp-vault/templates/secret-vault-auth.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: vault-auth-secret
-  namespace: default
+  name: {{ include "vault.name" .}}-auth-secret
+  namespace: {{ .Values.vault.auth.namespace }}
   annotations:
-    kubernetes.io/service-account.name: vault-auth
+    kubernetes.io/service-account.name: {{ include "vault.name" .}}-auth
 type: kubernetes.io/service-account-token
