--- a/charts/hashicorp-vault/templates/service-account-vault.yaml
+++ b/charts/hashicorp-vault/templates/service-account-vault.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: vault-auth
-  namespace: default
+  name: {{ include "vault.name" .}}-auth
+  namespace: {{ .Values.vault.auth.namespace }}
