Variables for templates

--- a/charts/gitlab/templates/cm-gitlab-templates.yaml
+++ b/charts/gitlab/templates/cm-gitlab-templates.yaml
@@ -88,8 +88,10 @@ data:
             gitlab_destination_group: "{{ $.Values.gitlab.destinationgroup }}"
             cluster_subdomain: ".{{ $.Values.cluster.subdomain }}"
             gitlab_user_count: "{{ $.Values.gitlab.users.count }}"
+            rhdh_gitops_namespace: "{{ $.Values.gitops.namespace }}"
+            rhdh_gitops_project: "{{ $.Values.gitops.project }}"
 {{- end }}
-            
+        
         - name: Add new files to the repository
           ansible.builtin.command:
             chdir: >-
