--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -190,3 +190,31 @@ data:
           until: r_group_user.status == 201
           loop: '{{ "{{" }} r_users.json {{ "}}" }}'
 {{- end }}
+
+        - name: Set webhook secret
+          ansible.builtin.set_fact:
+            webhook_secret: "{{ "{{" }} lookup('password', '/dev/null chars=ascii_lowercase length=12') {{ "}}" }}"
+
+        - name: Retrieve Vault Pod
+          kubernetes.core.k8s_info:
+            kind: Pod
+            name: {{ .Values.vault.name }}-0
+            namespace: {{ .Values.vault.namespace }}
+          register: r_vault
+          retries: 120
+          delay: 5
+          until:
+            - r_vault.resources is defined
+            - r_vault.resources | length > 0
+            - r_vault.resources[0].status is defined
+            - r_vault.resources[0].status.phase is defined
+            - r_vault.resources[0].status.phase == 'Running'
+
+        - name: Create vault secrets for Gitlab
+          kubernetes.core.k8s_exec:
+            namespace: {{ .Values.vault.namespace }}
+            pod: {{ .Values.vault.namespace }}-0
+            command: '{{ "{{" }} item {{ "}}" }}'
+          loop:
+            - 'vault kv put kv/secrets/rhdh/gitlab token={{ "{{" }} root_token {{ "}}" }}'
+            - 'vault kv put kv/secrets/rhdh/gitlab_webhook secret={{ "{{" }} webhook_secret {{ "}}" }}'
