--- a/charts/gitlab/templates/cm-gitlab-templates.yaml
+++ b/charts/gitlab/templates/cm-gitlab-templates.yaml
@@ -86,7 +86,7 @@ data:
           vars:
             gitlab_host: "{{ $.Values.gitlab.host }}"
             gitlab_destination_group: "{{ $.Values.gitlab.destinationgroup }}"
-            cluster_subdomain: ".{{ $.Values.cluster.subdomain }}"
+            cluster_subdomain: "{{ $.Values.cluster.subdomain }}"
             gitlab_user_count: "{{ $.Values.gitlab.users.count }}"
             rhdh_gitops_namespace: "{{ $.Values.gitops.namespace }}"
             rhdh_gitops_project: "{{ $.Values.gitops.project }}"
