--- a/charts/gitlab/templates/deploy-gitlab.yaml
+++ b/charts/gitlab/templates/deploy-gitlab.yaml
@@ -22,7 +22,7 @@ spec:
             name: gitlab-cm
         - secretRef:
             name: gitlab-secret
-        image: quay.io/redhat-gpte/gitlab:16.0.4
+        image: {{ $.Values.gitlab.image }}
         imagePullPolicy: Always
         name: gitlab
         ports:
