Disable Gitlab CI/CD for imported projects

--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -132,6 +132,7 @@ data:
               name: '{{ "{{" }} item.name {{ "}}" }}'
               import_url: '{{ "{{" }} item.url {{ "}}" }}'
               visibility: public
+              builds_access_level: disabled
               namespace_id: '{{ "{{" }} r_group.json.id {{ "}}" }}'
             headers:
               PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
