--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -151,8 +151,8 @@ data:
 {{- end }}
 {{- end }}
 
-{{- if $item.user }}
-{{- range $item1 := $item.user }}
+{{- if $item.users }}
+{{- range $item1 := $item.users }}
 
         - name: Add user to group
           when: item.username == '{{ $item1.id }}'
