--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -134,7 +134,7 @@ data:
               visibility: public
               builds_access_level: enabled
               auto_devops_enabled: false
-              only_allow_merge_if_pipeline_succeeds: true
+              only_allow_merge_if_pipeline_succeeds: '{{ "{{" }} item.checkPipeline {{ "}}" }}'
               namespace_id: '{{ "{{" }} r_group.json.id {{ "}}" }}'
             headers:
               PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
@@ -148,6 +148,7 @@ data:
 {{- range $item1 := $item.repo }}
             - name: {{ $item1.name }}
               url: {{ $item1.url }}
+              checkPipeline: {{ include "gitlab.repo.check-pipeline" $item1 }}
 {{- end }}
 {{- end }}
 
