--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -33,11 +33,17 @@ gitlab:
     - name: rhdh
       repo:
         - name: template-quarkus-simple
-          url: https://github.com/btison/rhdh-template-quarkus-simple.git
+          url: https://github.com/redhat-pe-workshop/rhdh-template-quarkus-simple.git
         - name: parasol-store-dev-template
-          url: https://github.com/btison/pew-parasol-store-dev-templates.git
+          url: https://github.com/redhat-pe-workshop/parasol-store-dev-templates.git
         - name: developer-hub-config
-          url: https://github.com/btison/pew-developer-hub-config.git
+          url: https://github.com/redhat-pe-workshop/developer-hub-config.git
+        - name: import-existing-app-template
+          url: https://github.com/redhat-pe-workshop/import-existing-app-template.git
+        - name: import-existing-api-template
+          url: https://github.com/redhat-pe-workshop/import-api-template.git
+        - name: rhdh-entities
+          url: https://github.com/redhat-pe-workshop/pe-workshop-entities.git
       users:
         - id: pe1
         - id: pe2
@@ -49,21 +55,21 @@ gitlab:
     - name: parasol
       repo:
         - name: parasol-store
-          url: https://github.com/btison/pew-parasol-store.git
+          url: https://github.com/redhat-pe-workshop/parasol-store.git
           properties:
             onlyMergeWhenPipelineSucceeds: true
         - name: parasol-web
-          url: https://github.com/btison/pew-parasol-web.git
+          url: https://github.com/redhat-pe-workshop/parasol-web.git
           properties:
             onlyMergeWhenPipelineSucceeds: true
         - name: parasol-db-manifests
-          url: https://github.com/btison/pew-parasol-db-manifests.git
+          url: https://github.com/redhat-pe-workshop/parasol-db-manifests.git
         - name: parasol-store-manifests
-          url: https://github.com/btison/pew-parasol-store-manifests.git
+          url: https://github.com/redhat-pe-workshop/parasol-store-manifests.git
         - name: parasol-web-manifests
-          url: https://github.com/btison/pew-parasol-web-manifests.git
+          url: https://github.com/redhat-pe-workshop/parasol-web-manifests.git
         - name: parasol-store-build-manifests
-          url: https://github.com/btison/pew-parasol-store-build-manifests.git
+          url: https://github.com/redhat-pe-workshop/parasol-store-build-manifests.git
       users:
         - id: dev1
         - id: dev2
@@ -75,7 +81,16 @@ gitlab:
       branch: main
       templates:
         - template.yaml
-
+    - group: rhdh
+      project: import-existing-app-template
+      branch: main
+      templates:
+        - template.yaml
+    - group: rhdh
+      project: import-existing-api-template
+      branch: main
+      templates:
+        - template.yaml
 postgresql:
   dbUser: gitlab
   dbPassword: passw0rd
