include mkdocs.yaml of global-techdocs for replacing gitlab_host

--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -109,6 +109,7 @@ gitlab:
       branch: main
       templates:
         - catalog-info.yaml
+        - mkdocs.yaml
 postgresql:
   dbUser: gitlab
   dbPassword: passw0rd
