import and template orchestrator workflows

--- a/charts/gitlab/templates/cm-gitlab-templates.yaml
+++ b/charts/gitlab/templates/cm-gitlab-templates.yaml
@@ -89,6 +89,7 @@ data:
             rhdh_gitops_namespace: "{{ $.Values.gitops.namespace }}"
             rhdh_gitops_project: "{{ $.Values.gitops.project }}"
             quay_host: "{{ $.Values.quay.host }}"
+            orchestrator_namespace: "{{ $.Values.orchestrator.namespace }}"
 {{- end }}
 
         - name: Add new files to the repository
