--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -126,6 +126,7 @@ gitlab:
       branch: main
       templates:
         - manifests/greeting/application.yaml
+        - manifests/create-ocp-namespace/application.yaml
 postgresql:
   dbUser: gitlab
   dbPassword: passw0rd
