--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -44,6 +44,8 @@ gitlab:
           url: https://github.com/redhat-pe-workshop/import-api-template.git
         - name: rhdh-entities
           url: https://github.com/redhat-pe-workshop/pe-workshop-entities.git
+        - name: template-developer-self-service
+          url: https://github.com/redhat-pe-workshop/rhdh-template-developer-self-service.git
       users:
         - id: pe1
         - id: pe2
@@ -110,6 +112,13 @@ gitlab:
       templates:
         - catalog-info.yaml
         - mkdocs.yaml
+    - group: rhdh
+      project: template-developer-self-service
+      branch: main
+      templates:
+        - postgres15/template.yaml
+        - namespace/template-small.yaml
+        - namespace/template-medium.yaml
 postgresql:
   dbUser: gitlab
   dbPassword: passw0rd
