added create-ocp-namespace-swt template

--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -127,6 +127,7 @@ gitlab:
       templates:
         - manifests/greeting/application.yaml
         - manifests/create-ocp-namespace/application.yaml
+        - manifests/create-ocp-namespace-swt/application.yaml
 postgresql:
   dbUser: gitlab
   dbPassword: passw0rd
