added namespace-large to templates

--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -121,6 +121,7 @@ gitlab:
         - postgres15/template.yaml
         - namespace/template-small.yaml
         - namespace/template-medium.yaml
+        - namespace/template-large.yaml
     - group: rhdh
       project: orchestrator-workflows
       branch: main
