Replace Envelope terminology with all-location

--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -78,8 +78,8 @@ gitlab:
           url: https://github.com/redhat-pe-workshop/parasol-web-manifests.git
         - name: parasol-store-build-manifests
           url: https://github.com/redhat-pe-workshop/parasol-store-build-manifests.git
-        - name: envelope-parasol-catalog
-          url: https://github.com/redhat-pe-workshop/envelope-parasol-catalog.git
+        - name: all-location-parasol
+          url: https://github.com/redhat-pe-workshop/all-location-parasol.git
       users:
         - id: dev1
         - id: dev2
